{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 49,
  "lineage": "01f0891b-748a-7eb0-4b0d-3b826e22013b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0aba19e56f3eaec05",
            "arn": "arn:aws:ec2:eu-north-1:989346119941:instance/i-05400b326ee61dc4c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "RootVolume"
                },
                "tags_all": {
                  "Name": "RootVolume"
                },
                "throughput": 125,
                "volume_id": "vol-0cb44f94d5ddd80a4",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05400b326ee61dc4c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "Key1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0172c245b451bad99"
              }
            ],
            "primary_network_interface_id": "eni-0172c245b451bad99",
            "private_dns": "ip-172-31-31-92.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.31.92",
            "public_dns": "ec2-13-60-219-223.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.60.219.223",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "RootVolume"
                },
                "tags_all": {
                  "Name": "RootVolume"
                },
                "throughput": 125,
                "volume_id": "vol-0cb44f94d5ddd80a4",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "SG_Terraform"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ef4426246017a4f8",
            "tags": {
              "Name": "Demo Instance PZT"
            },
            "tags_all": {
              "Name": "Demo Instance PZT"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f36e8a50607c1bcd"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "989346119941",
            "id": "i-05400b326ee61dc4c",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.SG_Terrafrom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG_Terrafrom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:989346119941:security-group/sg-0f36e8a50607c1bcd",
            "description": "Security group for Terraform demo",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f36e8a50607c1bcd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ICMP Ping access",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG_Terraform",
            "name_prefix": "",
            "owner_id": "989346119941",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fe3b80bbc95934d1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "989346119941",
            "id": "sg-0f36e8a50607c1bcd",
            "region": "eu-north-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-860451291",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "eu-north-1",
            "security_group_id": "sg-0f36e8a50607c1bcd",
            "security_group_rule_id": "sgr-0cadc4a482c31cff9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.SG_Terrafrom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP access",
            "from_port": 80,
            "id": "sgrule-612199452",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-north-1",
            "security_group_id": "sg-0f36e8a50607c1bcd",
            "security_group_rule_id": "sgr-05aa15019cb087713",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.SG_Terrafrom"
          ]
        },
        {
          "index_key": "icmp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ICMP Ping access",
            "from_port": 8,
            "id": "sgrule-2246039934",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "region": "eu-north-1",
            "security_group_id": "sg-0f36e8a50607c1bcd",
            "security_group_rule_id": "sgr-005dcc49985ddd92a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.SG_Terrafrom"
          ]
        },
        {
          "index_key": "ssh",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH access",
            "from_port": 22,
            "id": "sgrule-2465673641",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-north-1",
            "security_group_id": "sg-0f36e8a50607c1bcd",
            "security_group_rule_id": "sgr-072d8ae18561a3262",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.SG_Terrafrom"
          ]
        }
      ]
    }
  ]
}